--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "task manager",
   "main": "dist/index.js",
+  "engines": {
+    "node": ">9"
+  },
   "jest": {
     "testEnvironment": "node"
   },
@@ -11,30 +14,31 @@
     "sequelize": "sequelize",
     "nodemon": "nodemon",
     "test": "jest",
+    "test:watch": "jest --watch",
     "babel-node": "babel-node",
     "start": "gulp server",
+    "build": "npm run webpack --config webpack.config.prod.babel.js",
     "eslint": "eslint",
     "webpack": "webpack"
   },
   "author": "Artem Ivanec",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-cli": "*",
     "babel-core": "*",
     "babel-loader": "*",
     "babel-polyfill": "*",
     "babel-preset-env": "*",
     "babel-preset-stage-0": "*",
+    "babel-register": "^6.26.0",
     "bootstrap": "4.0.0-beta",
-    "popper.js": "*",
-    "css-loader": "*",
     "debug": "*",
     "dotenv": "*",
-    "gulp": "*",
     "gulp-util": "*",
     "jquery": "*",
     "jquery-ujs": "*",
-    "koa": "*",
+    "koa": "^2.5.0",
     "koa-bodyparser": "*",
     "koa-flash-simple": "*",
     "koa-generic-session": "*",
@@ -45,26 +49,36 @@
     "koa-static": "*",
     "koa-webpack": "*",
     "lodash": "*",
-    "pg": "*",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
+    "popper.js": "^1.14.3",
+    "rollbar": "^2.3.9",
     "sequelize": "*",
     "sequelize-cli": "*",
-    "sqlite3": "*",
-    "style-loader": "*",
+    "sqlite3": "^4.0.0",
     "umzug": "*",
-    "webpack": "*"
+    "webpack": "^4.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^8.2.0",
     "babel-eslint": "*",
+    "css-loader": "^0.28.11",
     "eslint": "*",
     "eslint-config-airbnb-base": "*",
     "eslint-plugin-import": "*",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "gulp": "^4.0.0",
     "gulp-nodemon": "^2.2.1",
     "jest": "^21",
     "jest-supertest-matchers": "*",
+    "node-sass": "^4.8.3",
     "nodemon": "*",
+    "postcss-loader": "^2.1.3",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
     "superagent": "*",
-    "supertest": "*"
+    "supertest": "*",
+    "uglifyjs-webpack-plugin": "^1.2.4",
+    "webpack-hot-client": "^2.2.1"
   }
 }
